--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,11 @@ services:
       - '8000:8000'
     environment:
       - DB_URL=mongodb://db/pokemon
+      - SECRET_KEY=your-secret-key
+
     depends_on:
       - db
+
   db:
     image: mongo
     ports:
